; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/infinity60/extr_led_controller.c_set_lock_leds.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/infinity60/extr_led_controller.c_set_lock_leds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IS31_FUNCTIONREG = common dso_local global i32 0, align 4
@IS31_REG_SHUTDOWN = common dso_local global i32 0, align 4
@IS31_REG_SHUTDOWN_ON = common dso_local global i32 0, align 4
@IS31_REG_SHUTDOWN_OFF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_lock_leds(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca [2 x i64], align 16
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = bitcast [2 x i64]* %8 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %9, i8 0, i64 16, i1 false)
  %10 = load i64, i64* %6, align 8
  %11 = icmp eq i64 %10, 0
  br i1 %11, label %12, label %29

12:                                               ; preds = %3
  %13 = load i32, i32* @IS31_FUNCTIONREG, align 4
  %14 = load i32, i32* @IS31_REG_SHUTDOWN, align 4
  %15 = load i32, i32* @IS31_REG_SHUTDOWN_ON, align 4
  %16 = call i32 @is31_write_register(i32 %13, i32 %14, i32 %15)
  %17 = call i32 @chThdSleepMilliseconds(i32 5)
  %18 = call i32 @is31_read_register(i32 0, i32 0, i64* %7)
  %19 = load i32, i32* @IS31_FUNCTIONREG, align 4
  %20 = load i32, i32* @IS31_REG_SHUTDOWN, align 4
  %21 = load i32, i32* @IS31_REG_SHUTDOWN_OFF, align 4
  %22 = call i32 @is31_write_register(i32 %19, i32 %20, i32 %21)
  %23 = load i64, i64* %7, align 8
  %24 = icmp eq i64 %23, 255
  br i1 %24, label %25, label %28

25:                                               ; preds = %12
  %26 = load i64, i64* %5, align 8
  %27 = or i64 %26, 4
  store i64 %27, i64* %5, align 8
  br label %28

28:                                               ; preds = %25, %12
  br label %29

29:                                               ; preds = %28, %3
  %30 = load i64, i64* %6, align 8
  %31 = getelementptr inbounds [2 x i64], [2 x i64]* %8, i64 0, i64 0
  %32 = load i64, i64* %4, align 8
  %33 = load i64, i64* %5, align 8
  %34 = call i32 @set_led_bit(i64 %30, i64* %31, i64 %32, i64 %33)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @is31_write_register(i32, i32, i32) #2

declare dso_local i32 @chThdSleepMilliseconds(i32) #2

declare dso_local i32 @is31_read_register(i32, i32, i64*) #2

declare dso_local i32 @set_led_bit(i64, i64*, i64, i64) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
